

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="786dp">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="785dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="381dp"
                    android:layout_height="313dp"
                    android:contentDescription="@string/imagem_de_cadastro"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/background_registro"
                    tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

                <Button
                    android:id="@+id/buttonCadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="137dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="137dp"
                    android:backgroundTint="#F5B44A"
                    android:fontFamily="sans-serif"
                    android:text="@string/cadastrar"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background_textField_Telefone"
                    app:strokeColor="#D99E3F"
                    app:strokeWidth="2dp" />

                <ImageView
                    android:id="@+id/buttonVoltar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/botao_voltar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/seta_voltar"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/cadastro_registro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/cadastre_se"
                    android:textColor="#4A4A4A"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="44dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="-4dp"
                    android:contentDescription="@string/traco_decorativo"
                    app:layout_constraintEnd_toEndOf="@+id/cadastro_registro"
                    app:layout_constraintTop_toBottomOf="@+id/cadastro_registro"
                    app:srcCompat="@drawable/ic_traco_verde"
                    tools:ignore="ImageContrastCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/background_textField_Nome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/nome_e_sobrenome"
                    app:boxStrokeColor="#00CB65"
                    app:helperText="Apenas o primeiro e o ultimo nome"
                    app:hintTextColor="@color/Verde_Bottom_Nav_Bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/register_person"
                    app:startIconTint="#00CB65">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#757575" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/background_textField_Telefone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/telefone"
                    app:boxStrokeColor="#00CB65"
                    app:helperText="Numero de comunicação particular"
                    app:hintTextColor="@color/Verde_Bottom_Nav_Bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background_textField_Cpf"
                    app:prefixText="+11"
                    app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                    app:startIconTint="#00CB65">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/background_textField_Cpf"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/cpf"
                    app:boxStrokeColor="#00CB65"
                    app:helperText="Apenas números"
                    app:hintTextColor="@color/Verde_Bottom_Nav_Bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background_textField_Confirm"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="#00CB65">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColorHint="#757575" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/background_textField_Confirm"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/confirme_sua_senha"
                    app:boxStrokeColor="#00CB65"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:helperText="Confirme sua senha*"
                    app:hintTextColor="@color/Verde_Bottom_Nav_Bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background_textField_Senha"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="#00CB65">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/background_textField_Senha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/senha"
                    app:boxStrokeColor="#00CB65"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:helperText="mínimo 6 digitos*"
                    app:helperTextEnabled="false"
                    app:hintTextColor="@color/Verde_Bottom_Nav_Bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background_textField_Email"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="#00CB65">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/background_textField_Email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/email"
                    app:boxStrokeColor="#00CB65"
                    app:endIconMode="clear_text"
                    app:helperText="Digite E-mail um Válido "
                    app:hintTextColor="@color/Verde_Bottom_Nav_Bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background_textField_Nome"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:startIconTint="#00CB65">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textField_Email"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>