<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="17dp"
    android:background="#DDFADD"
    android:elevation="10dp"
    android:orientation="vertical"
    android:padding="20dp"
    app:cardElevation="12dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:padding="12dp"
        android:paddingVertical="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/textNomeProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/baloo_thambi"
            android:gravity="center"
            android:text="@string/nome_produto"

            android:textColor="#8E8C8C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageProdutoAdapter"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="28dp"
            android:foregroundGravity="center|center_horizontal"

            android:textColor="#8E8C8C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNomeProduto"
            app:srcCompat="@drawable/camisa_esboco" />

        <TextView
            android:id="@+id/textDescricaoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/descrição_produto"
            android:textColor="#8E8C8C"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProdutoAdapter" />

        <TextView
            android:id="@+id/textQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/quantidade_produto"
            android:textColor="#8E8C8C"

            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescricaoProduto" />

        <TextView
            android:id="@+id/textQuantidadeDisponivelProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/valor"
            android:textColor="#52BD20"
            android:textSize="22sp"

            app:layout_constraintBottom_toBottomOf="@+id/textQuantidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toEndOf="@+id/textQuantidade"
            app:layout_constraintTop_toTopOf="@+id/textQuantidade" />

        <TextView
            android:id="@+id/textValorProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/valor"
            android:textColor="#52BD20"

            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/textValor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toEndOf="@+id/textValor"
            app:layout_constraintTop_toTopOf="@+id/textValor" />

        <TextView
            android:id="@+id/textCategoriaProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/categoria_produto"
            android:textColor="#8E8C8C"

            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textValor" />

        <TextView
            android:id="@+id/textValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/valor_produto"
            android:textColor="#8E8C8C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textQuantidade" />

        <Button
            android:id="@+id/buttonExcluir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/fundo_caixa"
            android:backgroundTint="#F5B44A"
            android:fontFamily="@font/baloo_thambi"
            android:text="Excluir"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCategoriaProduto"
            app:strokeColor="#D99E3F"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>